Added references, changed about page description

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 <!-- Landing Page -->
     <div class="hero">
       <div class="navbar">
+        <!-- Image retrieved from: https://www.dolphinresearch.org.au/ -->
         <img src="logo.png" class="logo">
+        
         <button type="button"> Support Us </button>
         
       </div>
@@ -56,13 +58,7 @@
 <section id="about">
   <h2> What We Do </h2>
 <p> 
-The Dolphin Research Institute is based at Hastings, on the shores of Western Port in Victoria, Australia. DRI's research is focused primarily in the south-eastern region of Victoria, especially Port Phillip, Western Port and the Gippsland Lakes.
-
-The Institute has over 25 years of dolphin research - we know our resident dolphins through fin identification and regular surveys; our data-base is extensive and ever-expanding! We also know that our supporters feel proud of our work. It is a tangible way for them to be able to say "Yes, I'm helping these dolphins now, and for their future."
-
-DRI began in the late 1980's by people who were concerned about local dolphins and their marine environment. The Institute has grown in to the well-managed, sustainable, not-for-profit conservation organisation that is the 'go-to' for just about all-things dolphin related in Victoria. The Dolphin Research Institute has been caring for our bays since 1991 - we are proud that we are now also pioneering the federally-funded National Dolphin Health Project.
-
-We work in three areas: Research - for Conservation; Education - for the next generation and Environmental Leadership - for the community.
+The Dolphin Research Institute was established in 1991, based in Hastings, Victoria, in the sunny country of Australia. DRI works in research, education and environmental leadership for conservation of the dolphins. DRI also pioneers the federally-funded National Dolphin Health Project. DRI is an entirely funded by the community, foundations, the corporate sector and government grants. Without you, DRI wouldn't exist!
 
 </p>
 </section>
@@ -73,6 +69,7 @@ We work in three areas: Research - for Conservation; Education - for the next ge
   <h2> Events </h2>
 <div class="container">
   <!-- Events layout -->
+  <!-- All 3 images retrieved from: https://www.dolphinresearch.org.au/ -->
 <div class="row">
   <div class="column">
     <img src="edu.jpg" alt="Education" style="width:100%">
